# bom-parser

./: .gitignore  pyproject.toml
config/: header_synonyms.yaml  heuristic_weights.yaml  supplier_aliases.yaml
scripts/: regenerate_goldens.py
src/bom_parser/: __init__.py  cli.py  pipeline.py
src/bom_parser/models/: __init__.py  bom.py  geometry.py  ingestion.py  internal_pattern.py  records.py  scoring.py
src/bom_parser/services/: __init__.py  exporter.py  heuristic_scorer.py  ingestion.py  internal_pattern.py  layout_detector.py  line_grouping.py  row_assembler.py  supplier_normalizer.py
src/bom_parser/utils/: __init__.py  consts.py  discovery.py
tests/: conftest.py
tests/integration/: test_golden_snapshots.py  test_pipeline.py
tests/unit/: test_heuristic_scorer.py  test_internal_pattern.py  test_row_assembler.py  test_supplier_normalizer.py
