[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bom-parser"
version = "0.1.0"
description = "Deterministic, programmatic PDF Bill of Materials parser"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.10",
    "pypdf>=4.0",
    "rapidfuzz>=3.0",
    "regex>=2023.0",
    "unidecode>=1.3",
    "pydantic>=2.0",
    "dateparser>=1.2",
    "typer>=0.12",
    "rich>=13.0",
    "structlog>=24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "black>=24.0",
    "pyright>=1.1.380",
    "pre-commit>=3.0",
    "types-PyYAML",
    "types-dateparser",
]
ocr = [
    "pdf2image>=1.16",
    "pytesseract>=0.3",
]

[project.scripts]
bom-parser = "bom_parser.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
include = ["src", "tests"]
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
